# blurb

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  cliff.toml  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml  test-frontend.yml  test-rust.yml  test.yml
assets/: editor.css  tailwind.css  tiptap-bundle.js
assets/icons/: icon.icns
crates/richtext-core/: Cargo.toml
crates/richtext-render/: Cargo.toml
editor/: build.js  package-lock.json  package.json
editor/src/: tiptap-bridge.js
scripts/: dev-db.sh  patch-version.sh
src/: App.css  App.tsx  logging.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clippings.rs  commands.rs  commands_tests.rs  db.rs  kindle.rs  kindle_tests.rs  lib.rs  main.rs  metadata.rs  migrations.rs  migrations_tests.rs  models.rs
src/components/: AddBookForm.tsx  BookCard.tsx  BookDetail.tsx  CommandPalette.tsx  DiaryEntryForm.tsx  DiaryFeed.tsx  KindleSync.tsx  LibraryGrid.tsx  LibraryList.tsx  RatingStars.tsx  ReviewEditor.tsx  ReviewPage.test.ts  ReviewPage.tsx  ShelfPicker.test.tsx  ShelfPicker.tsx  StatusFilterBar.test.tsx  StatusFilterBar.tsx  StatusSelect.test.ts  StatusSelect.tsx
src/data/: commands.rs  commands_tests.rs  db.rs  db_tests.rs  migrations.rs  migrations_tests.rs  mod.rs  models.rs
src/hooks/: mod.rs  useCommandPalette.ts  useLibraryFilter.test.ts  useLibraryFilter.ts  use_library_filter.rs
src/lib/: api.ts  commands.ts  cover.test.ts  cover.ts  editorExtensions.ts  reviewParser.test.ts  reviewParser.ts
src/services/: clipboard.rs  clippings.rs  clippings_tests.rs  enrichment.rs  export.rs  export_tests.rs  goodreads.rs  goodreads_tests.rs  kfx.rs  kfx_tests.rs  kindle.rs  kindle_tests.rs  letterboxd.rs  letterboxd_tests.rs  metadata.rs  metadata_tests.rs  mod.rs  (+7 more)
(+69 files in other folders)
