[package]
name = "blurb-dioxus"
version = "0.1.0"
description = "A personal book library manager"
authors = ["you"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.4", features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
mobi = "0.8"
base64 = "0.22"
dirs = "6.0.0"
rfd = "0.17.2"
pulldown-cmark = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
